--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-sessions": "^1.0.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongodb": "^6.13.0",
